--- a/index.html
+++ b/index.html
@@ -105,45 +105,31 @@
 			</ul>
 		</div>
 
-
-
 		<h2>
-			UPCOMING: <strong>November 10, 2020</strong>
+			UPCOMING: <strong>December 15, 2020</strong>
 		</h2>
 
 		<div id="spancontainer">
 			<div class="four columns speaker-box">
 				<div class="speaker-tile">
-					<img src="images/Amy_Greenwald.jpeg" />
+					<img src="images/lihong-pro.jpg" />
 					<p class="speaker-name">
-						Amy Greenwald
+						Lihong Li
 					</p>
 					<p class="speaker-affiliation">
-						Brown University
+						Amazon
 					</p>
 				</div>
 			</div>
 			<div class="eight columns speaker-box-text">
 				<p class="title">
-					Learning Equilibria in Simulation-Based Games ...
-					and the Ensuing Empirical Design of Mechanisms
+					Estimating Long-term Rewards by Off-policy Reinforcement Learning
 				</p>
 				<p class="abstract">
-					We describe a methodology for the design of parametric mechanisms,
-					which are multiagent systems inhabited by strategic agents, with knobs
-					that can be adjusted to achieve specific goals.  For example, a
-					network designer might seek a design that minimizes congestion
-					assuming selfish agents that play Nash equilibria.  Our methodology
-					applies under two key conditions: 1. the mechanisms induce games that
-					can be simulated, but that do not afford an analytic description,
-					2. the game-theoretic properties of interest (e.g., equilibria, social
-					welfare, etc.) are Lipschitz continuous in utilities.  Under these
-					conditions, we use the probably approximately correct learning
-					framework to construct algorithms that learn such properties.  We
-					show experimentally that our methodology can be used to design
-					effective mechanisms that capture stylized, but rich multiagent
-					systems, such as advertising exchanges, which are not generally
-					amenable to analytical mechanism design.
+					One of the core problems in reinforcement learning (RL) is estimating the long-term reward of a given policy.  In many real-world RL applications such as healthcare, dialogue systems and robotics, running a new policy on humans or robots can be costly or risky.  Therefore, we often face the "off-policy estimation" problem, that is, to estimate the long-term reward from existing data collected by another policy (say, a previously deployed one).  This talk will describe some recent advances in this problem, for which many standard estimators suffer an exponentially large variance (known as the curse of horizon).  Our approach is based on a dual linear program formulation of the long-term reward, avoids the curse of horizon, and can be extended to estimate confidence intervals and to deal with hidden confounders.
+				</p>
+				<p class="bio">
+					Lihong Li is a Senior Principal Scientist at Amazon. He obtained a PhD degree in Computer Science from Rutgers University. After that, he has held research positions in Yahoo!, Microsoft and Google. His main research interests are in reinforcement learning, including contextual bandits, and other related problems in AI. His work has found applications in recommendation, advertising, Web search and conversation systems. Homepage: <a href="http://lihongli.github.io">http://lihongli.github.io</a>.
 				</p>
 			</div>
 			<span class="stretch"></span>
@@ -177,7 +163,7 @@
 				</td>
 			</tr>
 
-			<tr class="nextevent">
+			<tr>
 				<td>Nov 10, 2020</td>
 				<td>Amy Greenwald<br>(Brown)</td>
 				<td>
@@ -186,7 +172,7 @@
 				</td>
 			</tr>
 
-			<tr>
+			<tr class="nextevent">
 				<td>Dec 15, 2020</td>
 				<td>Lihong Li<br>(Google)</td>
 				<td>
