--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		</div>
 
 		<h2>
-			UPCOMING: <strong>December 15, 2020</strong>
+			UPCOMING: <strong>Noon EST, 9 am PST. December 15, 2020</strong>
 		</h2>
 
 		<div id="spancontainer">
