fei fang + lihong video

--- a/index.html
+++ b/index.html
@@ -106,30 +106,30 @@
 		</div>
 
 		<h2>
-			UPCOMING: <strong>Noon EST, 9 am PST. December 15, 2020</strong>
+			UPCOMING: <strong>Noon EST, 9 am PST. February 2, 2021</strong>
 		</h2>
 
 		<div id="spancontainer">
 			<div class="four columns speaker-box">
 				<div class="speaker-tile">
-					<img src="images/lihong-pro.jpg" />
+					<!-- <img src="images/lihong-pro.jpg" /> -->
 					<p class="speaker-name">
-						Lihong Li
+						Fei Fang
 					</p>
 					<p class="speaker-affiliation">
-						Amazon
+						CMU
 					</p>
 				</div>
 			</div>
 			<div class="eight columns speaker-box-text">
 				<p class="title">
-					Estimating Long-term Rewards by Off-policy Reinforcement Learning
+					TBA
 				</p>
 				<p class="abstract">
-					One of the core problems in reinforcement learning (RL) is estimating the long-term reward of a given policy.  In many real-world RL applications such as healthcare, dialogue systems and robotics, running a new policy on humans or robots can be costly or risky.  Therefore, we often face the "off-policy estimation" problem, that is, to estimate the long-term reward from existing data collected by another policy (say, a previously deployed one).  This talk will describe some recent advances in this problem, for which many standard estimators suffer an exponentially large variance (known as the curse of horizon).  Our approach is based on a dual linear program formulation of the long-term reward, avoids the curse of horizon, and can be extended to estimate confidence intervals and to deal with hidden confounders.
+					TBA
 				</p>
 				<p class="bio">
-					Lihong Li is a Senior Principal Scientist at Amazon. He obtained a PhD degree in Computer Science from Rutgers University. After that, he has held research positions in Yahoo!, Microsoft and Google. His main research interests are in reinforcement learning, including contextual bandits, and other related problems in AI. His work has found applications in recommendation, advertising, Web search and conversation systems. Homepage: <a href="http://lihongli.github.io">http://lihongli.github.io</a>.
+					TBA
 				</p>
 			</div>
 			<span class="stretch"></span>
@@ -157,8 +157,9 @@
 				<td>Oct 6, 2020</td>
 				<td>Doyne Farmer<br>(Oxford)</td>
 				<td>
-					Global Microeconomics<br>
-					<a href="https://www.youtube.com/watch?v=pX5cuzvN2RM">recording
+					Global Microeconomics <br/>
+					<a href="https://www.youtube.com/watch?v=pX5cuzvN2RM">
+						Video
 					</a>
 				</td>
 			</tr>
@@ -167,8 +168,10 @@
 				<td>Nov 10, 2020</td>
 				<td>Amy Greenwald<br>(Brown)</td>
 				<td>
-					Learning Equilibria in Simulation-Based Games ...
-					and the Ensuing Empirical Design of Mechanisms
+					Learning Equilibria in Simulation-Based Games ... and the Ensuing Empirical Design of Mechanisms <br/>
+					<a href="https://www.youtube.com/watch?v=7E9QVO_BhxU">
+						Video
+					</a>
 				</td>
 			</tr>
 
@@ -176,7 +179,10 @@
 				<td>Dec 15, 2020</td>
 				<td>Lihong Li<br>(Google)</td>
 				<td>
-					<i>TBA</i>
+					Estimating Long-term Rewards by Off-policy Reinforcement Learning <br/>
+					<a href="https://www.youtube.com/watch?v=av2GSz0YOXA">
+						Video
+					</a>
 				</td>
 			</tr>
 
