--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		<div id="spancontainer">
 			<div class="four columns speaker-box">
 				<div class="speaker-tile">
-					<!-- <img src="images/lihong-pro.jpg" /> -->
+					<img src="images/feifang.jpg" />
 					<p class="speaker-name">
 						Fei Fang
 					</p>
