--- a/index.html
+++ b/index.html
@@ -191,7 +191,9 @@
 				<td>Fei Fang<br>(CMU)</td>
 				<td>
 					Game Theory and Machine Learning for Multiagent Communication and Coordination <br />
-					<i>TBA</i>
+					<a href="https://youtu.be/B1krrN12vLU">
+						Video
+					</a>
 				</td>
 			</tr>
 
