--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
 					Game Theory and Machine Learning for Multiagent Communication and Coordination <br />
 					<a href="https://youtu.be/B1krrN12vLU">
 						Video
+					</a>&nbsp;-&nbsp;
+					<a href="https://www.notion.so/AI-Economist-Fei-Fang-Seminar-3e26b69f602e434fb4f299b8c6fdb1c3">
+						Notes (thanks Yanan Habip!)
 					</a>
 				</td>
 			</tr>
