--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 						Video
 					</a>&nbsp;-&nbsp;
 					<a href="https://www.notion.so/AI-Economist-Fei-Fang-Seminar-3e26b69f602e434fb4f299b8c6fdb1c3">
-						Notes (thanks Yanan Habip!)
+						Notes (thanks Yaman Habip!)
 					</a>
 				</td>
 			</tr>
