--- a/index.html
+++ b/index.html
@@ -106,30 +106,32 @@
 		</div>
 
 		<h2>
-			UPCOMING: <strong>Noon EST, 9 am PST. February 2, 2021</strong>
+			UPCOMING: <strong>Noon EST, 9 am PST. March 9, 2021</strong>
 		</h2>
 
 		<div id="spancontainer">
 			<div class="four columns speaker-box">
 				<div class="speaker-tile">
-					<img src="images/feifang.jpg" />
+					<img src="images/ThoreGraepelBioPhoto.jpg" />
 					<p class="speaker-name">
-						Fei Fang
+						Thore Graepel
 					</p>
 					<p class="speaker-affiliation">
-						CMU
+						DeepMind
 					</p>
 				</div>
 			</div>
 			<div class="eight columns speaker-box-text">
 				<p class="title">
-					Game Theory and Machine Learning for Multiagent Communication and Coordination
+					Automatic Curricula in Deep Multi-Agent Reinforcement Learning
 				</p>
 				<p class="abstract">
-					Many societal challenges we are facing involve multiple decision-makers, each with their own goals or preferences. More importantly, these agents often need to communicate and coordinate with each other to achieve their goals or satisfy their preferences. For example, in security, public safety, and environmental sustainability domains, law enforcement agencies (defenders) fight against their opponents such as attackers and poachers. The defenders can work with humans in a community and coordinate and communicate with them in the combat against the opponents, e.g., through community policing programs, or relying on justice collaborators (informants). Game theory is an established paradigm for reasoning strategic interactions among multiple decision-makers, with several models and algorithms successfully deployed in the field to help the law enforcement agencies allocate their limited resources in the presence of opponents. On the other hand, recent advances in machine learning (ML) have led to a superhuman performance in Go and the real-time strategy game, StarCraft II, demonstrating the applicability of ML-based methods for multiagent problems and adaptability to human agents. The talk will cover our recent work on using game theory and machine learning to find efficient communication and coordination strategies in large-scale multiagent interactions, with applications to wildlife conservation and food security.
+					Multi-agent systems are emerging as a crucial element in our pursuit of designing and building intelligent systems. In order to succeed in the real world artificial agents must be able to cooperate, communicate, and reason about other agents’ beliefs, intentions and behaviours. Furthermore, as system designers we need to think about composing intelligent systems from intelligent subsystems, a multi-agent approach inspired by the observation that intelligent agents like organisations or governments are composed of other agents. Last but not least, as a product of evolution intelligence did not emerge in isolation, but as a group phenomenon. Hence, it seems plausible that learning agents require interaction with other agents to develop intelligence.
+
+					In this talk, I will discuss the exciting role that deep multi-agent reinforcement learning can play in the design and training of intelligent agents. In particular, training RL agents in interaction with each other can lead to the emergence of an automatic learning curriculum: From the perspective of each learning agent, the evolving behaviours of the other learning agents constitute a challenging environment dynamics and pose ever evolving tasks. I will present three case studies of deep multi-agent RL with auto-curricula: i) Learning to play board games at master level with AlphaZero, ii) Learning to play the game of Capture-The-Flag in 3d environments, and iii) Learning to cooperate in social dilemmas.
 				</p>
 				<p class="bio">
-					Fei Fang is an Assistant Professor in the School of Computer Science at Carnegie Mellon University. Before joining CMU, she was a Postdoctoral Fellow at the Center for Research on Computation and Society at Harvard University. She received her Ph.D. from the University of Southern California in 2016. Her research lies in the field of artificial intelligence and multi-agent systems, focusing on integrating machine learning with game theory. Her work has been motivated by and applied to security, sustainability, and mobility domains, contributing to the theme of AI for Social Good. Her work has won the Distinguished Paper at the 27th International Joint Conference on Artificial Intelligence and the 23rd European Conference on Artificial Intelligence (IJCAI-ECAI'18), Innovative Application Award at Innovative Applications of Artificial Intelligence (IAAI'16), the Outstanding Paper Award in Computational Sustainability Track at the International Joint Conferences on Artificial Intelligence (IJCAI'15). She was invited to give an IJCAI Early Career Spotlight talk in 2019 and was named to IEEE Intelligent Systems' "AI's 10 to Watch" list for 2020. Her dissertation is selected as the runner-up for IFAAMAS-16 Victor Lesser Distinguished Dissertation Award, and is selected to be the winner of the William F. Ballhaus, Jr. Prize for Excellence in Graduate Engineering Research as well as the Best Dissertation Award in Computer Science at the University of Southern California.
+					Thore Graepel works as a research group lead at Google DeepMind and holds a part-time position as Chair of Machine Learning at University College London. In support of responsible innovation in artificial intelligence, Thore also serves as a Member of the Board of Directors at Partnership on AI. Thore studied physics at the University of Hamburg, Imperial College London, and Technical University of Berlin, where he also obtained his PhD in machine learning in 2001. After holding post-doctoral positions at ETH Zurich and Royal Holloway College, University of London, Thore joined Microsoft Research in Cambridge in 2003, where he co-founded the Online Services and Advertising group. Major applications of Thore’s work include Xbox Live’s TrueSkill system for ranking and matchmaking and the AdPredictor framework for click-through rate prediction in Bing. Furthermore, Thore’s work on the predictability of private attributes from digital records of human behaviour has been the subject of intense discussion among privacy experts and the general public. At DeepMind, Thore has returned to his original passion of understanding and creating intelligent systems, and recently contributed to creating AlphaGo, the first computer program to defeat a human professional player in the full-sized game of Go.
 				</p>
 			</div>
 			<span class="stretch"></span>
@@ -204,7 +206,7 @@
 				<td>March 9, 2021</td>
 				<td>Thore Graepel<br>(DeepMind, UCL)</td>
 				<td>
-					<i>TBA</i>
+					Automatic Curricula in Deep Multi-Agent Reinforcement Learning
 				</td>
 			</tr>
 
