thore vid + johnd

--- a/index.html
+++ b/index.html
@@ -112,24 +112,24 @@
 		<div id="spancontainer">
 			<div class="four columns speaker-box">
 				<div class="speaker-tile">
-					<img src="images/feifang.jpg" />
+					<!-- <img src="images/feifang.jpg" /> -->
 					<p class="speaker-name">
-						Fei Fang
+						John Dickerson
 					</p>
 					<p class="speaker-affiliation">
-						CMU
+						University of Maryland
 					</p>
 				</div>
 			</div>
 			<div class="eight columns speaker-box-text">
 				<p class="title">
-					Game Theory and Machine Learning for Multiagent Communication and Coordination
+					TBD
 				</p>
 				<p class="abstract">
-					Many societal challenges we are facing involve multiple decision-makers, each with their own goals or preferences. More importantly, these agents often need to communicate and coordinate with each other to achieve their goals or satisfy their preferences. For example, in security, public safety, and environmental sustainability domains, law enforcement agencies (defenders) fight against their opponents such as attackers and poachers. The defenders can work with humans in a community and coordinate and communicate with them in the combat against the opponents, e.g., through community policing programs, or relying on justice collaborators (informants). Game theory is an established paradigm for reasoning strategic interactions among multiple decision-makers, with several models and algorithms successfully deployed in the field to help the law enforcement agencies allocate their limited resources in the presence of opponents. On the other hand, recent advances in machine learning (ML) have led to a superhuman performance in Go and the real-time strategy game, StarCraft II, demonstrating the applicability of ML-based methods for multiagent problems and adaptability to human agents. The talk will cover our recent work on using game theory and machine learning to find efficient communication and coordination strategies in large-scale multiagent interactions, with applications to wildlife conservation and food security.
+					TBD
 				</p>
 				<p class="bio">
-					Fei Fang is an Assistant Professor in the School of Computer Science at Carnegie Mellon University. Before joining CMU, she was a Postdoctoral Fellow at the Center for Research on Computation and Society at Harvard University. She received her Ph.D. from the University of Southern California in 2016. Her research lies in the field of artificial intelligence and multi-agent systems, focusing on integrating machine learning with game theory. Her work has been motivated by and applied to security, sustainability, and mobility domains, contributing to the theme of AI for Social Good. Her work has won the Distinguished Paper at the 27th International Joint Conference on Artificial Intelligence and the 23rd European Conference on Artificial Intelligence (IJCAI-ECAI'18), Innovative Application Award at Innovative Applications of Artificial Intelligence (IAAI'16), the Outstanding Paper Award in Computational Sustainability Track at the International Joint Conferences on Artificial Intelligence (IJCAI'15). She was invited to give an IJCAI Early Career Spotlight talk in 2019 and was named to IEEE Intelligent Systems' "AI's 10 to Watch" list for 2020. Her dissertation is selected as the runner-up for IFAAMAS-16 Victor Lesser Distinguished Dissertation Award, and is selected to be the winner of the William F. Ballhaus, Jr. Prize for Excellence in Graduate Engineering Research as well as the Best Dissertation Award in Computer Science at the University of Southern California.
+
 				</p>
 			</div>
 			<span class="stretch"></span>
@@ -204,6 +204,10 @@
 				<td>March 9, 2021</td>
 				<td>Thore Graepel<br>(DeepMind, UCL)</td>
 				<td>
+					Automatic Curricula in Deep Multi-agent Reinforcement Learning <br />
+					<a href="https://youtu.be/HJRIlqTvKFo">
+						Video
+					</a>&nbsp;-&nbsp;
 					<i>TBA</i>
 				</td>
 			</tr>
