thore vid + johnd

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 				</td>
 			</tr>
 
-			<tr class="nextevent">
+			<tr>
 				<td>Feb 2, 2021</td>
 				<td>Fei Fang<br>(CMU)</td>
 				<td>
@@ -207,8 +207,18 @@
 					Automatic Curricula in Deep Multi-agent Reinforcement Learning <br />
 					<a href="https://youtu.be/HJRIlqTvKFo">
 						Video
-					</a>&nbsp;-&nbsp;
-					<i>TBA</i>
+					</a>
+				</td>
+			</tr>
+
+			<tr class="nextevent">
+				<td>April 6, 2021</td>
+				<td>John Dickerson<br>(University of Maryland)</td>
+				<td>
+					TBA <br />
+					<!-- <a href="https://youtu.be/HJRIlqTvKFo">
+						Video
+					</a> -->
 				</td>
 			</tr>
 
