--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		</div>
 
 		<h2>
-			UPCOMING: <strong>Noon EST, 9 am PST. March 9, 2021</strong>
+			UPCOMING: <strong>Noon EST, 9 am PST. April 6, 2021</strong>
 		</h2>
 
 		<div id="spancontainer">
@@ -221,7 +221,7 @@ This talk covers hot-off-the-presses work led by PhD students Michael Curry, Pin
 				<td>April 6, 2021</td>
 				<td>John Dickerson<br>(University of Maryland)</td>
 				<td>
-					TBA <br />
+					Deep Learning for Auction Design: Fairness, Robustness, and Expressiveness<br />
 					<!-- <a href="https://youtu.be/HJRIlqTvKFo">
 						Video
 					</a> -->
