Add John Dickerson seminar video

--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@ This talk covers hot-off-the-presses work led by PhD students Michael Curry, Pin
 				<td>John Dickerson<br>(University of Maryland)</td>
 				<td>
 					Deep Learning for Auction Design: Fairness, Robustness, and Expressiveness<br />
-					<!-- <a href="https://youtu.be/HJRIlqTvKFo">
+					<a href="https://youtu.be/bqGUOJkz8L8">
 						Video
-					</a> -->
+					</a>
 				</td>
 			</tr>
 
