--- a/index.html
+++ b/index.html
@@ -105,41 +105,41 @@
 			</ul>
 		</div>
 
-		<h2>
-			UPCOMING: <strong>Noon EST, 9 am PST. April 6, 2021</strong>
-		</h2>
+<!--		<h2>-->
+<!--			UPCOMING: <strong>Noon EST, 9 am PST. April 6, 2021</strong>-->
+<!--		</h2>-->
 
-		<div id="spancontainer">
-			<div class="four columns speaker-box">
-				<div class="speaker-tile">
-					<img src="images/dickerson_umd.jpg" />
-					<p class="speaker-name">
-						John Dickerson
-					</p>
-					<p class="speaker-affiliation">
-						University of Maryland
-					</p>
-				</div>
-			</div>
-			<div class="eight columns speaker-box-text">
-				<p class="title">
-					Deep Learning for Auction Design: Fairness, Robustness, and Expressiveness
-				</p>
-				<p class="abstract">
-					The design of revenue-maximizing auctions with strong incentive guarantees is a core concern of economic theory. Computational auctions enable online advertising, sourcing, spectrum allocation, and myriad financial markets. Analytic progress in this space is notoriously difficult; since Myerson's 1981 work characterizing single-item optimal auctions, there has been limited progress outside of restricted settings. A recent paper by Dütting et al. circumvents analytic difficulties by applying deep learning techniques to, instead, approximate optimal auctions. Their RegretNet architecture can represent auctions with arbitrary numbers of items and participants; it is trained to be empirically strategyproof, but the property is never exactly verified leaving potential loopholes for market participants to exploit. In parallel, new research from Ilvento et al. and other groups has developed notions of fairness in the context of auction design. Inspired by these advances, in this talk, we discuss extensions of these techniques for approximating auctions using deep learning to address concerns of
-* fairness while maintaining high revenue and strong incentive guarantees;
-* certified robustness, that is, verification of claimed strategyproofness of deep learned auctions; and
-* expressiveness via different demand functions and other constraints.
-To enable that last point, we propose a new architecture to learn incentive compatible, revenue-maximizing auctions from sampled valuations, which uses the Sinkhorn algorithm to perform a differentiable bipartite matching. Our new framework allows the network to learn strategyproof revenue-maximizing mechanisms in settings not learnable by the previous RegretNet architecture.
+<!--		<div id="spancontainer">-->
+<!--			<div class="four columns speaker-box">-->
+<!--				<div class="speaker-tile">-->
+<!--					<img src="images/dickerson_umd.jpg" />-->
+<!--					<p class="speaker-name">-->
+<!--						John Dickerson-->
+<!--					</p>-->
+<!--					<p class="speaker-affiliation">-->
+<!--						University of Maryland-->
+<!--					</p>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="eight columns speaker-box-text">-->
+<!--				<p class="title">-->
+<!--					Deep Learning for Auction Design: Fairness, Robustness, and Expressiveness-->
+<!--				</p>-->
+<!--				<p class="abstract">-->
+<!--					The design of revenue-maximizing auctions with strong incentive guarantees is a core concern of economic theory. Computational auctions enable online advertising, sourcing, spectrum allocation, and myriad financial markets. Analytic progress in this space is notoriously difficult; since Myerson's 1981 work characterizing single-item optimal auctions, there has been limited progress outside of restricted settings. A recent paper by Dütting et al. circumvents analytic difficulties by applying deep learning techniques to, instead, approximate optimal auctions. Their RegretNet architecture can represent auctions with arbitrary numbers of items and participants; it is trained to be empirically strategyproof, but the property is never exactly verified leaving potential loopholes for market participants to exploit. In parallel, new research from Ilvento et al. and other groups has developed notions of fairness in the context of auction design. Inspired by these advances, in this talk, we discuss extensions of these techniques for approximating auctions using deep learning to address concerns of-->
+<!--* fairness while maintaining high revenue and strong incentive guarantees;-->
+<!--* certified robustness, that is, verification of claimed strategyproofness of deep learned auctions; and-->
+<!--* expressiveness via different demand functions and other constraints.-->
+<!--To enable that last point, we propose a new architecture to learn incentive compatible, revenue-maximizing auctions from sampled valuations, which uses the Sinkhorn algorithm to perform a differentiable bipartite matching. Our new framework allows the network to learn strategyproof revenue-maximizing mechanisms in settings not learnable by the previous RegretNet architecture.-->
 
-This talk covers hot-off-the-presses work led by PhD students Michael Curry, Ping-yeh Chiang, and Samuel Dooley, and undergraduate students Kevin Kuo, Uro Lyi, Anthony Ostuni, and Elizabeth Horishny.  Papers have appeared at NeurIPS-20 or are currently under review; please check arXiv or get in touch for drafts.
-				</p>
-				<p class="bio">
-					John P Dickerson is an Assistant Professor of Computer Science at the University of Maryland as well as Chief Scientist of Arthur AI, an enterprise-focused AI/ML model monitoring firm.  He is a recipient of awards such as the NSF CAREER Award, IEEE Intelligent Systems AI's 10 to Watch, Google Faculty Research Award, Google Research Scholar, and paper awards and nominations at venues such as AAAI.  His research centers on solving practical economic problems using techniques from computer science, stochastic optimization, and machine learning. He has worked extensively on theoretical and empirical approaches to organ exchange where his work has set policy at the UNOS nationwide kidney exchange; worldwide blood donation markets with Facebook; game-theoretic approaches to counter-terrorism and negotiation, where his models have been deployed; and market design problems in industry (e.g., online advertising) through various startups.  Dickerson received his PhD in computer science from Carnegie Mellon University.
-				</p>
-			</div>
-			<span class="stretch"></span>
-		</div>
+<!--This talk covers hot-off-the-presses work led by PhD students Michael Curry, Ping-yeh Chiang, and Samuel Dooley, and undergraduate students Kevin Kuo, Uro Lyi, Anthony Ostuni, and Elizabeth Horishny.  Papers have appeared at NeurIPS-20 or are currently under review; please check arXiv or get in touch for drafts.-->
+<!--				</p>-->
+<!--				<p class="bio">-->
+<!--					John P Dickerson is an Assistant Professor of Computer Science at the University of Maryland as well as Chief Scientist of Arthur AI, an enterprise-focused AI/ML model monitoring firm.  He is a recipient of awards such as the NSF CAREER Award, IEEE Intelligent Systems AI's 10 to Watch, Google Faculty Research Award, Google Research Scholar, and paper awards and nominations at venues such as AAAI.  His research centers on solving practical economic problems using techniques from computer science, stochastic optimization, and machine learning. He has worked extensively on theoretical and empirical approaches to organ exchange where his work has set policy at the UNOS nationwide kidney exchange; worldwide blood donation markets with Facebook; game-theoretic approaches to counter-terrorism and negotiation, where his models have been deployed; and market design problems in industry (e.g., online advertising) through various startups.  Dickerson received his PhD in computer science from Carnegie Mellon University.-->
+<!--				</p>-->
+<!--			</div>-->
+<!--			<span class="stretch"></span>-->
+<!--		</div>-->
 
 
 		<h2 id="fullschedule">
@@ -217,12 +217,23 @@ This talk covers hot-off-the-presses work led by PhD students Michael Curry, Pin
 				</td>
 			</tr>
 
-			<tr class="nextevent">
+			<tr>
 				<td>April 6, 2021</td>
 				<td>John Dickerson<br>(University of Maryland)</td>
 				<td>
 					Deep Learning for Auction Design: Fairness, Robustness, and Expressiveness<br />
 					<a href="https://youtu.be/bqGUOJkz8L8">
+						Video
+					</a>
+				</td>
+			</tr>
+
+			<tr>
+				<td>June 8, 2021</td>
+				<td>Nika Haghtalab<br>(UC Berkeley)</td>
+				<td>
+					Learning and Persuading with Anecdotes<br />
+					<a href="https://youtu.be/80Rrc4THrNE">
 						Video
 					</a>
 				</td>
